Add support for session authentication for future front-end
